@@ -1,3 +1,13 @@
+2013-06-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (clearcase-checkout-comment-type): revert to
+	'normal
+	(vc-clearcase-checkout): remove check for
+	`clearcase-checkout-comment-type' for Bug #16 workaround
+	(vc-clearcase-log-edit-mode): new defun, inserts the checkout
+	comment.
+	(clearcase-bind-checkout-comment): removed
+
 2013-05-03  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	Workaround for Bug #16
